style(GameStats): add min-hight to fix layout shift issue

--- a/src/components/XOGame/GameStats/GameStats.module.scss
+++ b/src/components/XOGame/GameStats/GameStats.module.scss
@@ -10,6 +10,7 @@
   border-radius: 16px;
   border: 1px solid #3b424e;
   width: 100%;
+  min-height: 98px;
 
   &.x3 {
     width: 100%;
